# mpc_MuJoCo

./: .gitignore  IK.py  IK_copy.py  README.md  Utils.py  VI_example.ipynb  __init__.py  batch-VI.sh  config.yaml  controller.py  cost_evaluator.py  create_tarball.sh  environment.yml  equations_of_motion.py  main.py  minimal_example_closed_loop.py  mujoco_sim_test.ipynb  pendulum_model.py  pin_cartpole.py  pin_exporter.py  pin_pendulum_model.py  pin_visualizer.py  pixi.toml  pyproject.toml  replay.py  segment_segment_distance.py  segment_segment_squared_distance.py  simulator.py  solve_OCP.py  test.py  torchSummary.py  utils.py  visualization.py  yref.py
collision_config/: two_dof_arm_collision_config.py
configs/: CartPoleconfig.yaml  Pendulumconfig.yaml  TwoDofArmconfig.yaml  config.yaml  iiwa14config.yaml  replay_config.yaml
data_collection/: __init__.py  data_collector.py  data_config.yaml  data_utils.py  data_viz.py
jupyter_notebooks/: TwoDofArm_post_processing.ipynb  iiwa14_post_processing.ipynb  pendulum_post_processing.ipynb  trajectory_plot.py
models_xml/: 2dof_arm.xml  cartpole.xml  cartpole_double_pendulum.xml  double_pendulum.xml  inverted_pendulum.xml  pendulum.xml  two_dof_arm.srdf  two_dof_arm.xml
neural_network/: config.yaml  main.py  torch_exporter.py  utils.py
obstacles/: two_dof_arm_obstacles.py
pin_models/: __init__.py  pin_base_class.py  pin_cartpole_double_pendulum_model.py  pin_cartpole_model.py  pin_double_pendulum_model.py  pin_iiwa14.py  pin_pendulum_model.py  pin_two_dof_arm.py  two_dof_arm.urdf
scripts/: batch-VI.sh  (+2 more)
(+34 files in other folders)
