[project]
name = "mpc-sim"
version = "0.1.0"
description = "Working version of MPC with MuJoCo"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "acados-template",
    "eigenpy>=3.12.0",
    "mediapy>=1.2.4",
    "mujoco>=3.3.3",
    "pip>=25.2",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.uv.sources]
acados-template = { path = "../acados/interfaces/acados_template" }
